<resources>
    <string name="app_name">Enkasa</string>
    <string name="login_btn_login_label">Iniciar Sesión</string>
    <string name="login_status_logged">Sesión Iniciada</string>
    <string name="login_status_failed">Nombre de usuario o contraseña incorrectos</string>
    <string name="login_lbl_create_account">No tienes cuenta? Crear cuenta</string>
    <string name="logo">logo</string>
    <string name="username" translatable="false">Username</string>
    <string name="mapa" translatable="false">Mapa</string>
    <string name="cambiar_password">Cambiar contraseña</string>
    <string name="logout_btn_logout_label">Cerrar Sesión</string>
    <string name="save">Guardar</string>
    <string name="setting">Configuración</string>

    <string name="provincia">Provincia</string>
    <string name="territorio">Territorio</string>
    <string name="categoria">Categoria</string>
    <string name="capacidad">Capacidad</string>
    <string name="certificado">Certificado</string>
    <string name="club">Club</string>
    <string name="restaurante">Restaurante</string>
    <string name="tienda">Tienda</string>
    <string name="autocaravana">Autocaravana</string>
    <string name="filtral">Filtrar</string>
    <string name="reservar">Reservar</string>
    <string name="buscar">Buscar</string>

    <string name="place_name">Nombre</string>
    <string name="place_direction">Direccion</string>
    <string name="place_tel">Telefono</string>
    <string name="more">Detalles</string>

    <string name="login_btn_login">Iniciar Sesión</string>
    <string name="login_btn_register">Registrarse</string>

    <!-- Strings  login y registrarse -->
    <string name="text_email" translatable="false">Email</string>
    <string name="text_apellidos">Apellidos</string>
    <string name="text_password" translatable="false">Password</string>
    <string name="text_passwordAgain" translatable="false">Confirme Password</string>
    <string name="text_user">Usuario</string>
    <string name="text_name">Nombre</string>
    <string name="text_dir">Direccion</string>
    <!-- errores -->

    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Este campo es necesario</string>
    <string name="error_match_password">Las contraseñas no coindiden</string>
    <string name="error_format_mail">El formato de mail es incorrecto</string>
    <string name="error_out_of_range">Es demasiado largo</string>
    <string name="error_fechaini_miss">Debe seleccionar una fecha de inicio</string>
    <string name="error_fechafin_miss">Debes selecionar una fecha de fin</string>
    <string name="error_as_zero">El valor debe ser mayor que 0</string>


    <!-- reserva -->
    <string name="resumen">Resumen</string>
    <string name="codigo_postal">Codigo Postel</string>
    <string name="mail" translatable="false">Mail</string>
    <string name="foto">Foto</string>
    <string name="num_book">Numero de reservas</string>
    <string name="start_date">Fecha de entrada</string>
    <string name="end_date">Fecha de salida</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="title_activity_lugares" translatable="false">LugaresActivity</string>
    <string name="note">Nota</string>
    <string name="reserva">Reserva</string>
    <string name="mis_reservas">Mis Reservas</string>

    <!-- menus -->
    <string name="lugares_navigation_search">Buscar</string>
    <string name="lugares_navigation_reserves">@string/mis_reservas</string>
    <string name="lugares_navigation_profile">Perfil</string>
    <string name="title_activity_filter" translatable="false">Filter</string>
    <string name="lugares_navigation_map" translatable="false">Mapa</string>

    <!-- Strings related to Settings -->

    <string-array name="filter_sortBy">
        <item>Nombre</item>
        <item>Provincia</item>
        <item>Población</item>
    </string-array>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_perfil" translatable="false">PerfilActivity</string>

    <string name="alojamientos_tipo_albergue">Albergues</string>
    <string name="alojamientos_tipo_rural">Casas Rurales</string>
    <string name="alojamientos_tipo_camping">Campings</string>
    <string name="alojamientos_tipo_agroturismos">Agroturismos</string>

    <string-array name="alojaminetos_tipos">
        <item>@string/alojamientos_tipo_albergue</item>
        <item>@string/alojamientos_tipo_camping</item>
        <item>@string/alojamientos_tipo_agroturismos</item>
        <item>@string/alojamientos_tipo_rural</item>
    </string-array>

    <string name="filter_select_todo_option">Todas</string>
    <string name="title_activity_maps_global" translatable="false">Map</string>

    <!-- ordels -->
    <string name="alojamiento_orden">Orden</string>
    <string name="orden_asc">Ascendente</string>
    <string name="ordenar_con">Ordenar por</string>
    <string name="municipio">Municipio</string>
    <string name="error_length_password">El longitud de contraseña debe estar entre 8&#8211;16 caracteres</string>

    <!-- idiomas -->
    <string name="cambiar_idioma">Cambiar Idioma</string>
    <string name="es">Castellano</string>
    <string name="eus">Euskera</string>

    <string-array name="idiomas">
        <item>@string/es</item>
        <item>@string/eus</item>
    </string-array>

    <!-- mesenge -->
    <string name="reservado">Se ha realizado la reserva</string>
    <string name="iniciando">Iniciando sesión...</string>
    <string name="no_result">No se han encontrado resultados</string>
    <string name="reserva_delete_confirm">¿Estas seguro de que deseas borrar esta reserva?</string>
    <string name="confirm_yes">Si</string>
    <string name="confirm_no">No</string>
    <string name="update_reserve">Actualizar reserva</string>
    <string name="text_distancia">Alojamientos a :</string>
</resources>
