<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="11dp"
        android:text="@string/login_btn_register"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="25dp"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/style_login"
        android:hint="@string/text_name"
        android:textSize="12sp" />

    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/style_login"
        android:ems="10"
        android:hint="@string/text_email"
        android:textSize="12sp" />

    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/style_login"
        android:ems="10"
        android:hint="@string/text_user"
        android:textSize="12sp" />

    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="25dp"
        android:layout_marginTop="165dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/style_login"
        android:ems="10"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:textSize="12sp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="443dp"
        android:layout_marginTop="248dp"
        android:background="@drawable/style_login"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/login_btn_register"
        android:textColor="@color/colorPrimary" />



</RelativeLayout>