<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/territorio"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtral"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="425dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/municipio"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="134dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="180dp" />

    <Spinner
        android:id="@+id/spinner_territorio"
        android:layout_width="211dp"
        android:layout_height="27dp"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="84dp" />

    <Spinner
        android:id="@+id/spinner_municipio"
        android:layout_width="211dp"
        android:layout_height="27dp"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="126dp" />

    <Spinner
        android:id="@+id/spinner_categoria"
        android:layout_width="211dp"
        android:layout_height="27dp"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="172dp" />

    <SeekBar
        android:id="@+id/seekBar_capacity"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="211dp"
        android:layout_height="29dp"
        android:max="50"
        android:min="1"
        android:progress="3"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="250dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capacidad"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="260dp" />

    <TextView
        android:id="@+id/separador"
        android:layout_width="256dp"
        android:layout_height="1dp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="301dp" />

    <TextView
        android:id="@+id/separador2"
        android:layout_width="256dp"
        android:layout_height="1dp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="224dp" />

</android.support.constraint.ConstraintLayout>