<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/login_btn_register"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/style_login"
                android:hint="@string/text_name"
                android:textSize="12sp" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/style_login"
                android:hint="@string/text_apellidos"
                android:textSize="12sp" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/style_login"
                android:ems="10"
                android:hint="@string/text_email"
                android:textSize="12sp" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/style_login"
                android:ems="10"
                android:hint="@string/text_user"
                android:textSize="12sp" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/style_login"
                android:ems="10"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/style_login"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:text="@string/login_btn_register"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>